--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>DOM Manipulation Exercises</title>
+    
   </head>
   <body>
 
@@ -10,7 +11,7 @@
     <div id="task2a"></div>
 
     <h4>Task 2 b</h4>
-
+    <button id="addText2">Add Text</button>
 
     <h4>Task 2 c</h4>
 
@@ -27,6 +28,6 @@
 
 
     <!-- Insert your JavaScript file -->
-
+<script type="text/javascript" src="script.js"></script>
   </body>
 </html>
